AC_INIT()

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gibbler, 0.1)

AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CXX
AC_PROG_CXXCPP
AC_LANG_CPLUSPLUS

AC_DISABLE_SHARED 
AC_PROG_LIBTOOL
# Shared library are disabled for default
#LT_INIT([disable-shared])

BOOST_REQUIRE([1.36.0])
BOOST_PROGRAM_OPTIONS
BOOST_THREADS

ac_have_mpi=no
AC_ARG_WITH(mpi,
            AC_HELP_STRING([--with-mpi],
                       [Force compilation with MPI]),
        [ if test $withval != no ; then
            ac_have_mpi=yes
          fi ] )
if test $ac_have_mpi = yes ; then
  AC_PATH_PROG(CXX, mpic++, none)
  if test  $CXX = none ; then
    AC_MSG_ERROR([Cannot locate MPI compiler drivers])
  fi
  BOOST_MPI
  BOOST_SERIALIZATION
  AC_DEFINE(MPI_ENABLED,1,[Define if compiling with MPI.])
  CPPFLAGS="$CPPFLAGS -DMPI_ENABLED"
fi

AM_CONDITIONAL([WITH_THREADS],true)




AC_CONFIG_FILES(Makefile src/Makefile)

AC_OUTPUT()
